--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -19,16 +19,16 @@
 
   <form class="form" action="/signup" method="post">
     <div class="form-input">
-      <label for="first_name">First Name</label>
-      <input type="text" name="first_name" id="first_name" required>
+      <label for="name">First Name</label>
+      <input type="text" name="name" id="first_name" required>
     </div>
     <div class="form-input">
-      <label for="last_name">Last Name</label>
-      <input type="text" name="last_name" id="last_name" required>
+      <label for="lastname">Last Name</label>
+      <input type="text" name="lastname" id="last_name" required>
     </div>
 
     <div class="form-input">
-      <label for="">Birthday date</label>
+      <label for="birthday">Birthday date</label>
       <input type="date" name="birthday" id="birthday" required>
     </div>
 
@@ -43,8 +43,8 @@
     </div>
 
     <div class="form-input">
-      <label for="telephone">Phone</label>
-      <input type="tel" name="telephone" id="telephone" pattern="[0-9]{10}" maxlength="10" minlength="10">
+      <label for="phone">Phone</label>
+      <input type="tel" name="phone" id="telephone" pattern="[0-9]{10}" maxlength="10" minlength="10">
     </div>
 
     <div class="form-input">
@@ -57,10 +57,10 @@
       <input type="password" name="password" id="password" required>
     </div>
 
-    <div class="form-input">
+    <!-- <div class="form-input">
       <label for="picture">Picture</label>
       <input type="url" name="picture" id="picture" required>
-    </div>
+    </div> -->
 
     <button type="submit">Submit</button>
   </form>
