--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,7 +32,7 @@
           <img src="/images/user.png" alt="">
           <h2>My Tweets</h2>
         </a>
-        <a href="./signup.ejs">
+        <a href="/logout">
           <img src="/images/logout.png" alt="">
           <h2>Logout</h2>
         </a>
