--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -29,7 +29,7 @@
 
     <div class="form-input">
       <label for="birthday">Birthday date</label>
-      <input type="date" name="birthday" id="birthday" required>
+      <input type="date" name="birthday" id="birthday"  required>
     </div>
 
     <div class="form-input">
@@ -44,7 +44,7 @@
 
     <div class="form-input">
       <label for="phone">Phone</label>
-      <input type="tel" name="phone" id="telephone" pattern="[0-9]{10}" maxlength="10" minlength="10">
+      <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" maxlength="10" minlength="10">
     </div>
 
     <div class="form-input">
