:tada: added tweets

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -66,7 +66,7 @@
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username">
-                <h3 class="comments-comment-content-username"><%= tweet.userid %></h3>
+                <h3 class="comments-comment-content-username"><%= tweet.username %></h3>
               </a>
               <span class="comments-comment-content-date"><%= tweet.createsAt %></span>
             </div>
