:tada: added profile

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,9 +45,9 @@
       </div>
       <form action="/tweet" method="post" class="tweet-container-form">
         <div class="tweet-container-message">
-          <label for="message"></label>
+          <label for="content"></label>
           <div class="tweet-container-text">
-            <textarea name="message" id="message" placeholder="Whats's happening ?"></textarea>
+            <textarea name="content" id="message" placeholder="Whats's happening ?"></textarea>
           </div>
 
         </div>
