--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,6 +48,7 @@
           <label for="content"></label>
           <div class="tweet-container-text">
             <textarea name="content" id="message" placeholder="Whats's happening ?"></textarea>
+            <input type="text" id="userid" name="userid" value="<%= user.id %>">
           </div>
 
         </div>
@@ -62,10 +63,10 @@
         <% tweets.forEach((tweet)=>{ %>
 
         <div class="comments-comment">
-          <a href="/username"><img src="./images/user.png" alt=""></a>
+          <a href="/username/<%= tweet.userid  %>"><img src="./images/user.png" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
-              <a href="/username">
+              <a href="/username/<%= tweet.userid %>">
                 <h3 class="comments-comment-content-username"><%= tweet.username %></h3>
               </a>
               <span class="comments-comment-content-date"><%= tweet.createsAt %></span>
