:tada: added profile

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,7 +48,7 @@
           <label for="content"></label>
           <div class="tweet-container-text">
             <textarea name="content" id="message" placeholder="Whats's happening ?"></textarea>
-            <input type="text" id="userid" name="userid" value="<%= user.id %>">
+            <input type="text" id="userid" name="userid" value="<%=  %>">
           </div>
 
         </div>
