--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,7 +41,13 @@
 
     <div class="tweet-container">
       <div class="tweet-container-title">
-        <h3>Home</h3>
+        <% if (user) { %>
+          <h3>Welcome back<%= `   ${user.username}` %> 😀</h3>
+    
+        <% } else { %>
+          <a href="/login">Se connecter</a>
+          <a href="/signup">S'inscrire</a>
+        <% } %>
       </div>
       <form action="/tweet" method="post" class="tweet-container-form">
         <div class="tweet-container-message">
