--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,7 @@
           <img src="/images/bookmark.png" alt="">
           <h2>Bookmarks</h2>
         </a>
-        <a href="/username">
+        <a href="/username/<%= user.id %>">
           <img src="/images/user.png" alt="">
           <h2>My Tweets</h2>
         </a>
@@ -70,7 +70,7 @@
         <% tweets.forEach((tweet)=>{ %>
 
         <div class="comments-comment">
-          <a href="/username/<%= tweet.userid  %>"><img src="./images/user.png" alt=""></a>
+          <a href="/username/<%= tweet.userid  %>"><img src="<%= tweet.url %>" alt=""></a>
           <div class="comments-comment-content">
             <div class="comments-comment-content-nameDate">
               <a href="/username/<%= tweet.userid %>">
