--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -28,7 +28,7 @@
           <img src="/images/bookmark.png" alt="">
           <h2>Bookmarks</h2>
         </a>
-        <a href="/username">
+        <a href="#">
           <img src="/images/user.png" alt="">
           <h2>My Tweets</h2>
         </a>
@@ -48,7 +48,7 @@
           <img src="" alt="">
         </div>
         <div class="tweet-container-profile-picture">
-          <img src="./images/user.png" alt="">
+          <img src="<%= tweets[0].url %>" alt="">
         </div>
         <div class="tweet-container-profile-infos">
           <h3><%= tweets[0].name %></h3>
@@ -58,11 +58,14 @@
       </div>
 
       <div class="comments">
+        <% if (user ) { %>
+          <p>here<%= user.id %></p>
+         <% } %>
 
         <% tweets.forEach((tweet)=>{ %>
 
           <div class="comments-comment">
-            <a href="/username"><img src="./images/user.png" alt=""></a>
+            <a href="/username"><img src="<%= tweet.url %>" alt=""></a>
             <div class="comments-comment-content">
               <div class="comments-comment-content-nameDate">
                 <a href="/username">
@@ -72,6 +75,8 @@
               </div>
               <p class="comments-comment-content-text"><%= tweet.content %></p>
             </div>
+           
+
           </div>
   
   
