--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,7 @@
           <img src="/images/bookmark.png" alt="">
           <h2>Bookmarks</h2>
         </a>
-        <a href="/username/<%= user.id %>">
+        <a href="/username/">
           <img src="/images/user.png" alt="">
           <h2>My Tweets</h2>
         </a>
@@ -54,7 +54,7 @@
           <label for="content"></label>
           <div class="tweet-container-text">
             <textarea name="content" id="message" placeholder="Whats's happening ?"></textarea>
-            <input class="hide" type="text" id="userid" name="userid" value="<%= user.id %>">
+            <input class="hide" type="text" id="userid" name="userid" value="16">
             <input class="hide" id="datePicker" type="date" value="" name="createsAt">
           </div>
 
